--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
+    "@vermaysha/discord-webhook": "^1.2.0",
+    "express": "^4.18.2",
     "firebase": "^9.13.0"
   }
 }
