--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
+    "@popperjs/core": "^2.11.6",
     "@sveltejs/vite-plugin-svelte": "^1.0.2",
     "@tsconfig/svelte": "^3.0.0",
     "svelte": "^3.49.0",
@@ -21,7 +22,9 @@
   },
   "dependencies": {
     "@vermaysha/discord-webhook": "^1.2.0",
+    "axios": "^1.2.3",
     "express": "^4.18.2",
-    "firebase": "^9.13.0"
+    "firebase": "^9.13.0",
+    "svelte-navigator": "^3.2.2"
   }
 }
