--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.2.3",
     "express": "^4.18.2",
     "firebase": "^9.13.0",
+    "sass": "^1.57.1",
     "svelte-navigator": "^3.2.2"
   }
 }
